syntax = "proto3";

option csharp_namespace = "GrpcDADTKV";

package dadtkv;

service DadTkvLeaseManagerService {
  rpc RequestLease (RequestLeaseRequest) returns (RequestLeaseReply);

  rpc Prepare (PrepareRequest) returns (PrepareReply);
  rpc Promise (PromiseRequest) returns (PromiseReply);
  rpc Accept (AcceptRequest) returns (AcceptReply);
  rpc Accepted (AcceptedRequest) returns (AcceptedReply);
}

message RequestLeaseRequest {
  string TransactionManager = 1;
  repeated string permissions = 2;
}

message RequestLeaseReply {}


message PrepareRequest {
  int32 epoch = 1;
}

message PrepareReply {}

message PromiseRequest {
  int32 write_timestamp = 1;
  int32 value = 2;
}

message PromiseReply {}

message AcceptRequest {
  int32 write_timestamp = 1;
  int32 value = 2;
}

message AcceptReply {}

message AcceptedRequest {
  int32 write_timestamp = 1;
  int32 value = 2;
}

message AcceptedReply {}